change font size

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,5 +1,6 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass[10pt,a4paper]{article}
 \usepackage[utf8]{inputenc}
+\usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{caption}
@@ -19,7 +20,7 @@ A dor crônica é um problema relevante de saúde pública, e estudos recentes a
 
 \section{Descrição dos Dados}
 Os dados foram coletados em duas etapas (pré e pós-intervenção), com aplicação do QND (12 questões) e QVC (10 questões). A amostra foi composta por estudantes randomizados em dois grupos iguais: uso de ferramenta de IA e aula assíncrona. Mas um problema de coleta afetou a identificação completa dos participantes. As variáveis incluem:
-\begin{itemize}
+\begin{itemize}[noitemsep]\small
     \item Participação por grupo;
     \item Respostas individuais por questão;
     \item Pontuação média nos testes QND e QVC;
@@ -32,7 +33,7 @@ O tratamento dos dados envolveu limpeza de inconsistências (ex.: respostas dupl
 
 \section{Justificativa das Visualizações}
 Cada visualização foi escolhida para destacar aspectos específicos:
-\begin{itemize}
+\begin{itemize}[noitemsep]\small
     \item \textbf{Sankey}: mostra o fluxo de participantes entre grupos e adesão, facilitando a percepção da distribuição.
     \item \textbf{Radar}: evidencia padrões de acertos/erros por questão, permitindo identificar lacunas de conhecimento.
     \item \textbf{Barras}: compara pontuações médias entre grupos e níveis de adesão, destacando diferenças de desempenho.
@@ -95,7 +96,7 @@ Essas observações devem ser interpretadas com cautela devido ao tamanho reduzi
 
 \section{Limitações e Possíveis Expansões}
 Sobre as visualizações e análises realizadas, identificados as seguintes pontos fortes:
-\begin{itemize}
+\begin{itemize}[noitemsep]\small
   \item \textbf{Sankey}: mostra bem perdas e adesão, mas não captura nuances dos motivos relatados (tempo, acesso, formato).
   \item \textbf{Radar (QND/QVC)}: evidencia diferenças por questão, mas pode mascarar o impacto da baixa adesão, já que muitos não responderam.
   \item \textbf{Barras (pontuação média)}: médias podem ser enviesadas pela pequena quantidade de participantes aderentes, aumentando risco de generalização indevida.
@@ -103,7 +104,7 @@ Sobre as visualizações e análises realizadas, identificados as seguintes pont
 \end{itemize}
 
 Além disso, identificamos as seguintes limitações do estudo:
-\begin{itemize}
+\begin{itemize}[noitemsep]\small
     \item Tamanho reduzido da amostra e perda de dados por falhas na coleta (15 participantes não identificados).
     \item Baixa adesão: 75\% dos participantes relataram não ter assistido ou interagido com o conteúdo, o que compromete a validade das comparações.
     \item Tempo insuficiente para interação: mais da metade dos alunos apontou falta de tempo como principal barreira, e cerca de 50--60\% sugeriram necessidade de mais tempo para engajamento.
@@ -113,7 +114,7 @@ Além disso, identificamos as seguintes limitações do estudo:
 \end{itemize}
 
 Como expansão, recomenda-se:
-\begin{itemize}
+\begin{itemize}[noitemsep]\small
     \item Aumentar o tempo disponível para interação com os materiais.
     \item Explorar formatos presenciais ou híbridos, considerando que parte dos alunos relatou dificuldade em absorver conteúdo online.
     \item Incluir visualizações qualitativas (ex.: nuvem de palavras ou gráficos de barras com feedback dos participantes).
